[package]
name = "sam3x8e_hal"
version = "0.1.0"
authors = ["Shock-1 <harshal.sprasad.mec17@itbhu.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
sam3x8e = {git = "https://github.com/Shock-1/sam3x8e.git"}

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["sam3x8e/rt"]